# claim_detec

./: .gitignore  README.md  deep_learning.ipynb  feature_learning.ipynb  pyproject.toml
data/: README.md
embeddings/: README.md
scripts/: load_corpus.py  load_embeddings.py  stop_words.py
